SUBDIRS = include src libdecoration plugins images gtk kde po metadata fsm

EXTRA_DIST =             \
	COPYING              \
	COPYING.GPL          \
	COPYING.LGPL         \
	COPYING.MIT          \
	fusilli.pc.in        \
	fusilli-cube.pc.in   \
	fusilli-scale.pc.in

DISTCLEANFILES =           \
	po/stamp-it            \
	po/.intltool-merge-cache

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA =    \
	fusilli.pc      \
	fusilli-cube.pc \
	fusilli-scale.pc

