filtersdir = $(compdatadir)/filters
filters_DATA = 		\
       blackandwhite   \
       blueish-filter  \
       contrast        \
       deuteranopia    \
       grayscale       \
       negative        \
       negative-green  \
       protanopia      \
       sepia           \
       swap-green-blue \
       swap-red-blue   \
       swap-red-green

EXTRA_DIST = $(filters_DATA)
